--- a/CarRental/Views/Account/Signup.cshtml
+++ b/CarRental/Views/Account/Signup.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = null;
-    ViewData["Title"] = "Registration";
+    ViewData["Title"] = "Sign Up";
 }
 
 <!DOCTYPE html>
@@ -21,7 +21,7 @@
         <button class="learn-more">Learn More</button>
     </div>
 
-    <img src="~/images/car-removebg-preview.png" alt="Car">
+    <img src="~/images/car.png" alt="Car">
 
     <div class="right-section">
         <div class="nav-bar">
@@ -34,7 +34,7 @@
         <div class="signup-box">
             <h2>Create New Account</h2>
 
-            <form asp-action="Registration" method="post">
+            <form asp-action="Signup" method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 @if (ViewBag.Message != null)
                 {
