--- a/CarRental/Views/Shared/UserDashboard.cshtml
+++ b/CarRental/Views/Shared/UserDashboard.cshtml
@@ -14,7 +14,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a class="nav-link text-dark" asp-controller="Account" asp-action="Registration">Register</a></li>
+        <li><a class="nav-link text-dark" asp-controller="Account" asp-action="Signup">Signup</a></li>
         <li>
             <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Login</a>
         </li>
