--- a/CarRental/Views/Account/Index.cshtml
+++ b/CarRental/Views/Account/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CarRental.Entities.UserAccount>
+﻿@model IEnumerable<CarRental.Models.UserAccount>
 
 @{
     ViewData["Title"] = "Index";
