--- a/CarRental/Views/Home/Index.cshtml
+++ b/CarRental/Views/Home/Index.cshtml
@@ -181,7 +181,10 @@
                             </div>
                             <button type="submit" class="login-button">Login</button>
                         </form>
-                        <p class="signup-link">Don’t have an account? <a href="Signup">Sign up here</a></p>
+                    <p class="signup-text">
+                        Don’t have an account?
+                        <a asp-controller="Account" asp-action="Signup">Sign Up</a>
+                    </p>
                     </div>
                 </section>
 
