--- a/CarRental/Views/Account/Signup.cshtml
+++ b/CarRental/Views/Account/Signup.cshtml
@@ -21,7 +21,7 @@
         <button class="learn-more">Learn More</button>
     </div>
 
-    <img src="~/images/car-removebg-preview.png" alt="Car">
+    <img src="~/images/car.png" alt="Car">
 
     <div class="right-section">
         <div class="nav-bar">
