--- a/CarRental/Views/Account/Login.cshtml
+++ b/CarRental/Views/Account/Login.cshtml
@@ -26,8 +26,8 @@
     <div class="right-section">
         <div class="nav-bar">
             <a asp-controller="Home" asp-action="Index">Home</a>
-            <a asp-controller="Home" asp-action="About">About Us</a>
-            <a asp-controller="Home" asp-action="Contact">Contact</a>
+            <a href="/Home/Index#about">About Us</a>
+            <a href="/Home/Index#contact">Contact</a>
             <a asp-controller="Account" asp-action="Login">Login</a>
         </div>
 
