with forgot pass done

--- a/CarRental/Views/Account/ResetPassword.cshtml
+++ b/CarRental/Views/Account/ResetPassword.cshtml
@@ -29,6 +29,13 @@
                 <input asp-for="NewPassword" type="password" id="new-password" placeholder="Enter new password" required />
             </div>
 
+            <div class="input-container">
+                <label for="confirm-password">Confirm Password</label>
+                <input asp-for="ConfirmPassword" type="password" id="confirm-password" placeholder="Confirm new password" required />
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            </div>
+
+
             <button type="submit" class="reset-btn">Reset Password</button>
         </form>
 
