--- a/CarRental/Views/Account/ForgotPassword.cshtml
+++ b/CarRental/Views/Account/ForgotPassword.cshtml
@@ -40,24 +40,25 @@
             <p class="forgot-password-info">
                 You forgot your password? Here you can easily get a new password.
             </p>
-
             <form asp-action="ForgotPassword" method="post">
                 <div class="input-container">
-                    <input asp-for="Email" type="text" placeholder="Email" required>
-
+                    <label for="email">Enter your email</label>
+                    <input asp-for="Email" type="email" id="email" placeholder="Enter email" required />
+                    <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
 
                 <button type="submit">Continue</button>
             </form>
 
-            @if (ViewData.ModelState["Email"]?.Errors.Count > 0)
+            @if (ViewBag.ErrorMessage != null)
             {
-                <p class="text-danger">@ViewData.ModelState["Email"].Errors[0].ErrorMessage</p>
+                <p class="text-danger">@ViewBag.ErrorMessage</p>
             }
             @if (ViewBag.SuccessMessage != null)
             {
                 <p class="text-success">@ViewBag.SuccessMessage</p>
             }
+
 
 
         </div>
