--- a/CarRental/Views/Home/Index.cshtml
+++ b/CarRental/Views/Home/Index.cshtml
@@ -122,7 +122,7 @@
                                         </div>
 
                                         <p>Model: @car.Model</p>
-                                        <p>Seater: 5 Seater</p>
+                                        <p>Seater: @car.Seaters</p>
                                     </div>
                                 </div>
                             }
